# jinja2-outputfile

./: .envrc  .gitignore  MANIFEST.in  README.md  README.rst  justfile  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: release-to-pypi.yml  test-pypy27.yml  test-windows.yml  test.yml  tests-pypy27.yml  tests-windows.yml  tests.yml
jinja2_ext_outputfile/: __init__.py
jinja2_outputfile/: __init__.py  _pathlib.py  _version.py
py.requirements/: develop.txt
tests/: __test_table.py  test_basics.py  test_outputfile.py
