# -- NEEDED FOR: Python 2.7 packaging
# REQUIRES: setuptools == 44.1.1 -- Has no support for "pyproject.toml"
# SEE: https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = jinja2-outputfile
version = 0.5.0
description = Jinja2 extension that redirects output to output file(s)
long_description = file: README.md
readme = README.md
author = Jens Engel
author_email = jenisys@noreply.github.com
url = https://github.com/jenisys/jinja2-outputfile
download_url: https://pypi.org/project/jinja2-outputfile
keywords =
    Jinja2, jinja2, jinja2-extension, template-extension
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Code Generators

[options]
requires_python = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
include_package_data = true
packages = find:
platforms = any
install_requires =
    jinja2 >= 3.0; python_version >= '3.6'
    jinja2 <  3.0; python_version <  '3.6'
    pathlib2; python_version <= '3.4'
zip_safe = false

# [options.package_data]
# * = *.txt, *.md
# hello = *.msg

# [options.extras_require]
# develop =
#     build
#     coverage >= 5.0
#     tox   >= 3.28.0,<4.0
#     virtualenv >= 20.26.6; python_version >= '3.7'
#     virtualenv <  20.22.0; python_version <  '3.7'
#     pytest >= 5.0; python_version >= '3.0'
#     pytest <  5.0; python_version <  '3.0'
#     pytest-html >= 2.0; python_version >= '3.0'
#     pytest-html < 2.0;  python_version <  '3.0'
# test =
#     pytest >= 5.0; python_version >= '3.0'
#     pytest <  5.0; python_version <  '3.0'
#     pytest-html >= 2.0; python_version >= '3.0'
#     pytest-html < 2.0;  python_version <  '3.0'


# [options.packages.find]
# include = jinja_outputfile*
